--- a/panel/src/main/resources/public/index.html
+++ b/panel/src/main/resources/public/index.html
@@ -26,7 +26,7 @@
 
         <mc-messages></mc-messages>
 
-        <div class="container-fluid uk-scope" ui-view="content"></div>
+        <div class="container-fluid" ui-view="content"></div>
     </main>
 </div>
 
