--- a/panel/src/main/resources/static/app/model/manufacturer/manufacturer-edit.html
+++ b/panel/src/main/resources/static/app/model/manufacturer/manufacturer-edit.html
@@ -1,42 +1,31 @@
-<section class="content">
-    <!-- Default box -->
-    <div class="box box-success">
-        <div class="box-header with-border">
-            <h3 class="box-title">Edit Manufacturer</h3>
-            <div class="box-tools pull-right">
-                <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip"
-                        title="Collapse">
-                    <i class="fa fa-minus"></i></button>
-                <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip"
-                        title="Remove">
-                    <i class="fa fa-times"></i></button>
-            </div>
-        </div>
-        <div class="box-body">
-            <form name="manufacturerForm">
-                <div class="row">
-                    <div class="col-md-4">
-                        <label>Name</label>
-                        <input type="text" class="uk-input" ng-model="vm.manufacturer.name">
-                    </div>
-                    <div class="col-md-4">
-                        <label>Telephone</label>
-                        <input type="text" class="uk-input" ng-model="vm.manufacturer.telephone">
-                    </div>
-                    <div class="col-md-4">
-                        <label>Address</label>
-                        <input type="text" class="uk-input" ng-model="vm.manufacturer.address">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="pull-right voffset-button">
-                            <button class="btn btn-flat btn-default" ui-sref="manufacturer">Back</button>
-                            <button class="btn btn-flat btn-success" ng-click="vm.save()">Save</button>
-                        </div>
-                    </div>
-                </div>
-            </form>
-        </div>
+<div class="card">
+    <div class="card-header">
+        Edit Manufacturer
     </div>
-</section>
+    <div class="card-block">
+        <form name="manufacturerForm">
+            <div class="row">
+                <div class="col-md-4">
+                    <label>Name</label>
+                    <input type="text" class="form-control" ng-model="vm.manufacturer.name">
+                </div>
+                <div class="col-md-4">
+                    <label>Telephone</label>
+                    <input type="text" class="form-control" ng-model="vm.manufacturer.telephone">
+                </div>
+                <div class="col-md-4">
+                    <label>Address</label>
+                    <input type="text" class="form-control" ng-model="vm.manufacturer.address">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="pull-right voffset-button">
+                        <button class="btn btn-flat btn-default" ui-sref="manufacturer">Back</button>
+                        <button class="btn btn-flat btn-success" ng-click="vm.save()">Save</button>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
