--- a/panel/src/main/resources/public/index.html
+++ b/panel/src/main/resources/public/index.html
@@ -19,7 +19,6 @@
 <div ng-include="'views/navbar.html'"></div>
 
 <div class="app-body">
-
     <div ng-include="'views/sidebar.html'"></div>
 
     <main class="main">
@@ -65,5 +64,12 @@
 <script src="app/model/manufacturer/manufacturer.controller.js"></script>
 <script src="app/model/manufacturer/manufacturer-create.controller.js"></script>
 <script src="app/model/manufacturer/manufacturer-edit.controller.js"></script>
+
+<script src="app/model/manufacturer/product.state.js"></script>
+<script src="app/model/manufacturer/product.service.js"></script>
+<script src="app/model/manufacturer/product.controller.js"></script>
+<script src="app/model/manufacturer/product-create.controller.js"></script>
+<script src="app/model/manufacturer/product-edit.controller.js"></script>
+
 
 </html>
