--- a/panel/src/main/resources/static/app/model/manufacturer/manufacturer-edit.html
+++ b/panel/src/main/resources/static/app/model/manufacturer/manufacturer-edit.html
@@ -1,8 +1,8 @@
-<div class="card">
-    <div class="card-header">
-        Edit Manufacturer
+<div class="panel">
+    <div class="panel-heading">
+        <h4 class="panel-title">Edit Manufacturer</h4>
     </div>
-    <div class="card-block">
+    <div class="panel-body">
         <form name="manufacturerForm">
             <div class="row">
                 <div class="col-md-4">
