--- a/panel/src/main/resources/static/app/model/product/product-create.html
+++ b/panel/src/main/resources/static/app/model/product/product-create.html
@@ -1,21 +1,21 @@
-<div class="panel">
-    <div class="panel-heading">
-        <h4 class="panel-title"> Create New Manufacturer</h4>
+<div class="card">
+    <div class="card-header">
+        Create ew Manufacturer
     </div>
-    <div class="panel-body">
+    <div class="card-block">
         <form name="manufacturerForm">
             <div class="row">
                 <div class="col-md-4">
                     <label>Name</label>
-                    <input type="text" class="form-control" ng-model="vm.manufacturer.name">
+                    <input type="text" class="uk-input" ng-model="vm.manufacturer.name">
                 </div>
                 <div class="col-md-4">
                     <label>Telephone</label>
-                    <input type="text" class="form-control" ng-model="vm.manufacturer.telephone">
+                    <input type="text" class="uk-input" ng-model="vm.manufacturer.telephone">
                 </div>
                 <div class="col-md-4">
                     <label>Address</label>
-                    <input type="text" class="form-control" ng-model="vm.manufacturer.address">
+                    <input type="text" class="uk-input" ng-model="vm.manufacturer.address">
                 </div>
             </div>
             <div class="row">
