--- a/panel/src/main/resources/static/app/model/manufacturer/manufacturer.html
+++ b/panel/src/main/resources/static/app/model/manufacturer/manufacturer.html
@@ -1,10 +1,10 @@
 <div class="row">
     <div class="col-md-12">
-        <div class="card">
-            <div class="card-header">
-                List of Manufacturers
+        <div class="panel">
+            <div class="panel-heading">
+                <h4 class="panel-title">List of Manufacturers</h4>
             </div>
-            <div class="card-block">
+            <div class="panel-body">
                 <div class="row">
                     <div class="col-md-4">
                         <label>Name</label>
@@ -20,7 +20,7 @@
                 <div class="row voffset2" ng-if="vm.manufacturers.length > 0">
                     <div class="col-md-12">
                         <div class="table-responsive">
-                            <table class="table table-bordered table-striped table-condensed">
+                            <table class="table table-hover">
                                 <thead>
                                 <tr>
                                     <th>Name</th>
@@ -35,7 +35,7 @@
                                     <td>{{manufacturer.telephone}}</td>
                                     <td>{{manufacturer.address}}</td>
                                     <td>
-                                        <span class="badge badge-success" role="b" ui-sref="manufacturer-edit({id:manufacturer.id})">
+                                        <span class="badge badge-success" role="button" ui-sref="manufacturer-edit({id:manufacturer.id})">
                                             <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                                         </span>
                                         <span class="badge badge-danger" role="button"><i class="fa fa-times" aria-hidden="true"></i></span>
@@ -43,7 +43,7 @@
                                 </tr>
                                 </tbody>
                             </table>
-                            <ul uib-pagination total-items="vm.totalItems" ng-model="vm.currentPage" ng-change="vm.loadAll()"></ul>
+                            <ul uib-pagination total-items="vm.totalItems" ng-model="vm.currentPage" ng-change="vm.loadAll()" class="pagination pagination-bordered"></ul>
                         </div>
                     </div>
                 </div>
