--- a/panel/src/main/resources/static/app/model/product/product-edit.html
+++ b/panel/src/main/resources/static/app/model/product/product-edit.html
@@ -1,8 +1,8 @@
-<div class="panel">
-    <div class="panel-heading">
-        <h4 class="panel-title"> Create New Manufacturer</h4>
+<div class="card">
+    <div class="card-header">
+        Edit Manufacturer
     </div>
-    <div class="panel-body">
+    <div class="card-block">
         <form name="manufacturerForm">
             <div class="row">
                 <div class="col-md-4">
@@ -22,7 +22,7 @@
                 <div class="col-md-12">
                     <div class="pull-right voffset-button">
                         <button class="btn btn-flat btn-default" ui-sref="manufacturer">Back</button>
-                        <button type="submit" class="btn btn-flat btn-success" ng-click="vm.save()">Save</button>
+                        <button class="btn btn-flat btn-success" ng-click="vm.save()">Save</button>
                     </div>
                 </div>
             </div>
