--- a/panel/src/main/resources/static/app/model/manufacturer/manufacturer-create.html
+++ b/panel/src/main/resources/static/app/model/manufacturer/manufacturer-create.html
@@ -1,4 +1,4 @@
-<div class="panel">
+<div class="panel panel-primary">
     <div class="panel-heading">
         <h4 class="panel-title"> Create New Manufacturer</h4>
     </div>
