--- a/panel/src/main/resources/static/app/model/manufacturer/manufacturer.html
+++ b/panel/src/main/resources/static/app/model/manufacturer/manufacturer.html
@@ -1,58 +1,56 @@
-<div class="row">
-    <div class="col-md-12">
-        <div class="panel">
-            <div class="panel-heading">
-                <h4 class="panel-title">List of Manufacturers</h4>
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        <h4 class="panel-title">List of Manufacturers</h4>
+    </div>
+    <div class="panel-body">
+        <div class="row">
+            <div class="col-md-4">
+                <label>Name</label>
+                <input type="text" class="form-control" ng-model="vm.manufacturer.name">
             </div>
-            <div class="panel-body">
-                <div class="row">
-                    <div class="col-md-4">
-                        <label>Name</label>
-                        <input type="text" class="form-control" ng-model="vm.manufacturer.name">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="pull-right voffset-button">
-                            <button class="btn btn-flat btn-default" ng-click="vm.loadAll()">List</button>
-                            <button class="btn btn-flat btn-primary" ui-sref="manufacturer-create">Create</button>
-                        </div>
-                    </div>
+            <div class="col-md-8">
+                <div class="pull-right voffset-button">
+                    <button class="btn btn-flat btn-default" ng-click="vm.loadAll()">List</button>
+                    <button class="btn btn-flat btn-primary" ui-sref="manufacturer-create">Create</button>
                 </div>
-                <div class="row voffset2" ng-if="vm.manufacturers.length > 0">
-                    <div class="col-md-12">
-                        <div class="table-responsive">
-                            <table class="table table-hover">
-                                <thead>
-                                <tr>
-                                    <th>Name</th>
-                                    <th>Telephone</th>
-                                    <th>Address</th>
-                                    <th>Actions</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                <tr ng-repeat="manufacturer in vm.manufacturers">
-                                    <td>{{manufacturer.name}}</td>
-                                    <td>{{manufacturer.telephone}}</td>
-                                    <td>{{manufacturer.address}}</td>
-                                    <td>
-                                        <span class="badge badge-success" role="button" ui-sref="manufacturer-edit({id:manufacturer.id})">
+            </div>
+        </div>
+        <div class="row voffset2" ng-if="vm.manufacturers.length > 0">
+            <div class="col-md-12">
+                <div class="table-responsive">
+                    <table class="table table-striped table-hover">
+                        <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Telephone</th>
+                            <th>Address</th>
+                            <th>Actions</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr ng-repeat="manufacturer in vm.manufacturers">
+                            <td>{{manufacturer.name}}</td>
+                            <td>{{manufacturer.telephone}}</td>
+                            <td>{{manufacturer.address}}</td>
+                            <td>
+                                        <span class="badge badge-success" role="button"
+                                              ui-sref="manufacturer-edit({id:manufacturer.id})">
                                             <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                                         </span>
-                                        <span class="badge badge-danger" role="button"><i class="fa fa-times" aria-hidden="true"></i></span>
-                                    </td>
-                                </tr>
-                                </tbody>
-                            </table>
-                            <ul uib-pagination total-items="vm.totalItems" ng-model="vm.currentPage" ng-change="vm.loadAll()" class="pagination pagination-bordered"></ul>
-                        </div>
-                    </div>
+                                <span class="badge badge-danger" role="button" ng-click="vm.deleteManufacturer(manufacturer)"><i class="fa fa-times" aria-hidden="true"></i></span>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <ul uib-pagination total-items="vm.totalItems" ng-model="vm.currentPage" ng-change="vm.loadAll()"
+                        ></ul>
                 </div>
-                <div class="row voffset2" ng-if="vm.manufacturers.length == 0">
-                    <div class="col-md-12">
-                        <div class="uk-placeholder uk-text-center">
-                            No manufacturer found
-                        </div>
-                    </div>
+            </div>
+        </div>
+        <div class="row voffset2" ng-if="vm.manufacturers.length == 0">
+            <div class="col-md-12">
+                <div class="placeholder text-center">
+                    No manufacturer found
                 </div>
             </div>
         </div>
