--- a/panel/src/main/resources/static/app/model/product/product-edit.html
+++ b/panel/src/main/resources/static/app/model/product/product-edit.html
@@ -1,8 +1,8 @@
-<div class="card">
-    <div class="card-header">
+<div class="box">
+    <div class="box-header with-border">
         Edit Manufacturer
     </div>
-    <div class="card-block">
+    <div class="box-body">
         <form name="manufacturerForm">
             <div class="row">
                 <div class="col-md-4">
