--- a/panel/src/main/resources/static/app/model/manufacturer/manufacturer.html
+++ b/panel/src/main/resources/static/app/model/manufacturer/manufacturer.html
@@ -1,8 +1,8 @@
-<div class="panel panel-primary">
-    <div class="panel-heading">
+<div class="box">
+    <div class="box-header with-border">
         <h4 class="panel-title">List of Manufacturers</h4>
     </div>
-    <div class="panel-body">
+    <div class="box-body">
         <div class="row">
             <div class="col-md-4">
                 <label>Name</label>
