--- a/panel/src/main/resources/static/app/model/product/product-create.html
+++ b/panel/src/main/resources/static/app/model/product/product-create.html
@@ -1,8 +1,8 @@
-<div class="panel panel-primary">
-    <div class="panel-heading">
+<div class="box ">
+    <div class="box-header with-border">
         <h4 class="panel-title">Create new Product</h4>
     </div>
-    <div class="panel-body">
+    <div class="box-body">
         <form name="manufacturerForm">
             <div class="row">
                 <div class="col-md-4">
