--- a/panel/src/main/resources/static/app/model/product/product.html
+++ b/panel/src/main/resources/static/app/model/product/product.html
@@ -1,8 +1,8 @@
-<div class="panel panel-primary">
-    <div class="panel-heading">
-       <h4 class="panel-title"> List of Products</h4>
+<div class="box">
+    <div class="box-header with-border">
+        <h3 class="box-title">List of Products</h3>
     </div>
-    <div class="panel-body">
+    <div class="box-body">
         <div class="row">
             <div class="col-md-4">
                 <label>Name</label>
@@ -21,8 +21,8 @@
             </div>
         </div>
         <div class="row voffset2" ng-if="vm.products.length == 0">
-            <div class="col-xs-4 col-lg-4">
-                <div class="uk-placeholder uk-text-center">
+            <div class="col-xs-12 col-lg-12">
+                <div class="placeholder text-center">
                     No Product found
                 </div>
             </div>
