--- a/panel/src/main/resources/static/app/model/product/product.html
+++ b/panel/src/main/resources/static/app/model/product/product.html
@@ -1,6 +1,6 @@
 <div class="box">
     <div class="box-header with-border">
-        <h3 class="box-title">List of Products</h3>
+        <h4 class="box-title">List of Products</h4>
     </div>
     <div class="box-body">
         <div class="row">
@@ -17,7 +17,32 @@
         </div>
         <div class="row voffset2" ng-if="vm.products.length > 0">
             <div class="col-md-12">
-                <ul uib-pagination total-items="vm.totalItems" ng-model="vm.currentPage" ng-change="vm.loadAll()"></ul>
+                <div class="table-responsive">
+                    <table class="table table-striped table-hover">
+                        <thead>
+                        <tr>
+                            <th>Title</th>
+                            <th>Quantity in Stock</th>
+                            <th>Price</th>
+                            <th>Actions</th>
+                        </tr>
+                        </thead>
+                        <tbody  ng-repeat="product in vm.products">
+                            <tr>
+                                <td>{{product.title}}</td>
+                                <td>{{product.quantityOnStock}}</td>
+                                <td>{{product.price}}</td>
+                            </tr>
+                            <tr style="display: none;">
+                                <td colspan="3">
+                                    {{product.description}}
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <ul uib-pagination total-items="vm.totalItems" ng-model="vm.currentPage" ng-change="vm.loadAll()"
+                    ></ul>
+                </div>
             </div>
         </div>
         <div class="row voffset2" ng-if="vm.products.length == 0">
