--- a/panel/src/main/resources/static/app/model/product/product.html
+++ b/panel/src/main/resources/static/app/model/product/product.html
@@ -18,23 +18,43 @@
         <div class="row voffset2" ng-if="vm.products.length > 0">
             <div class="col-md-12">
                 <div class="table-responsive">
-                    <table class="table table-striped table-hover">
+                    <table class="table table-striped">
                         <thead>
                         <tr>
                             <th>Title</th>
                             <th>Quantity in Stock</th>
                             <th>Price</th>
+                            <th>Status</th>
                             <th>Actions</th>
                         </tr>
                         </thead>
                         <tbody  ng-repeat="product in vm.products">
                             <tr>
-                                <td>{{product.title}}</td>
+                                <td role="button" ng-click="vm.showDescription($index)">
+                                    <span ng-if="!vm.showDesc[$index]">
+                                        <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                                    </span>
+                                    <span ng-if="vm.showDesc[$index]">
+                                        <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                                    </span>
+
+                                    {{product.title}}
+                                </td>
                                 <td>{{product.quantityOnStock}}</td>
-                                <td>{{product.price}}</td>
+                                <td>{{product.price | currency}}</td>
+                                <td>{{product.status}}</td>
+                                <td>
+                                    <span class="badge badge-success" role="button" ui-sref="product-edit({id:product.identifier})">
+                                        <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+                                    </span>
+                                    <span class="badge badge-danger" role="button">
+                                        <i class="fa fa-times" aria-hidden="true"></i>
+                                    </span>
+                                </td>
                             </tr>
-                            <tr style="display: none;">
-                                <td colspan="3">
+                            <tr ng-if="vm.showDesc[$index]">
+                                <td colspan="4"  class="row-inner">
+                                    <label>Description </label>
                                     {{product.description}}
                                 </td>
                             </tr>
