--- a/panel/src/main/resources/public/index.html
+++ b/panel/src/main/resources/public/index.html
@@ -58,7 +58,6 @@
 <script src="webjars/angularjs/1.6.2/angular-resource.min.js"></script>
 <script src="webjars/angularjs/1.6.2/angular-animate.min.js"></script>
 
-
 <script src="lib/angular-cache-buster.js"></script>
 <script src="lib/angular-ui-router.min.js"></script>
 <script src="lib/ui-bootstrap-tpls.min.js"></script>
@@ -76,6 +75,7 @@
 <script src="app/model/manufacturer/manufacturer.controller.js"></script>
 <script src="app/model/manufacturer/manufacturer-create.controller.js"></script>
 <script src="app/model/manufacturer/manufacturer-edit.controller.js"></script>
+<script src="app/model/manufacturer/manufacturer-modal.controller.js"></script>
 
 <script src="app/model/product/product.state.js"></script>
 <script src="app/model/product/product.service.js"></script>
