--- a/panel/src/main/resources/static/app/model/product/product-create.html
+++ b/panel/src/main/resources/static/app/model/product/product-create.html
@@ -1,28 +1,75 @@
-<div class="box ">
+<div class="box">
     <div class="box-header with-border">
-        <h4 class="panel-title">Create new Product</h4>
+        Create Product
     </div>
     <div class="box-body">
-        <form name="manufacturerForm">
-            <div class="row">
-                <div class="col-md-4">
-                    <label>Description</label>
-                    <input type="text" class="form-control" ng-model="vm.product.name">
-                </div>
-                <div class="col-md-4">
-                    <label>Telephone</label>
-                    <input type="text" class="form-control" ng-model="vm.product.telephone">
-                </div>
-                <div class="col-md-4">
-                    <label>Address</label>
-                    <input type="text" class="form-control" ng-model="vm.product.address">
-                </div>
-            </div>
+        <form name="productForm">
             <div class="row">
                 <div class="col-md-12">
                     <div class="pull-right voffset-button">
                         <button class="btn btn-flat btn-default" ui-sref="product">Back</button>
-                        <button type="submit" class="btn btn-flat btn-success" ng-click="vm.save()">Save</button>
+                        <button class="btn btn-flat btn-success" ng-click="vm.save()">Save</button>
+                    </div>
+                </div>
+            </div>
+            <div class="row voffset1">
+                <div class="col-md-12">
+                    <div class="panel-body">
+                        <fieldset class="form-horizontal">
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">Name:</label>
+                                <div class="col-sm-10">
+                                    <input type="text" ng-model="vm.product.title" class="form-control">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">Price:</label>
+                                <div class="col-sm-10">
+                                    <input type="text" ng-model="vm.product.price"  class="form-control">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">Model:</label>
+                                <div class="col-sm-10">
+                                    <input type="text" ng-model="vm.product.model" class="form-control">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">Quantity on Stock:</label>
+                                <div class="col-sm-10">
+                                    <input type="text" ng-model="vm.product.quantityOnStock" class="form-control">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">Status:</label>
+                                <div class="col-sm-10">
+                                    <label class="radio-inline">
+                                        <input type="radio" name="status" ng-model="vm.product.status" value="ACTIVE">Active
+                                    </label>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="status" ng-model="vm.product.status" value="INACTIVE">Inactive
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">Manufacturer:</label>
+                                <div class="col-sm-8">
+                                    <div class="input-group">
+                                        <input type="text" ng-model="vm.product.manufacturer.name" disabled  class="form-control">
+                                        <span class="input-group-btn">
+                                          <button class="btn btn-primary" type="button" ng-click="vm.selectManufacturer()">
+                                             Select
+                                          </button>
+                                       </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group"><label class="col-sm-2 control-label">Description:</label>
+                                <div class="col-sm-10">
+                                    <summernote height="300" ng-model="vm.product.description"></summernote>
+                                </div>
+                            </div>
+                        </fieldset>
                     </div>
                 </div>
             </div>
