--- a/panel/src/main/resources/static/app/model/product/product-edit.html
+++ b/panel/src/main/resources/static/app/model/product/product-edit.html
@@ -16,32 +16,60 @@
                 <div class="col-md-12">
                     <div class="panel-body">
                         <fieldset class="form-horizontal">
-                            <div class="form-group"><label class="col-sm-2 control-label">Name:</label>
-                                <div class="col-sm-10"><input type="text" ng-model="vm.product.title" class="form-control"></div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">Name:</label>
+                                <div class="col-sm-10">
+                                    <input type="text" ng-model="vm.product.title" class="form-control">
+                                </div>
                             </div>
-                            <div class="form-group"><label class="col-sm-2 control-label">Price:</label>
-                                <div class="col-sm-10"><input type="text" ng-model="vm.product.price" class="form-control"></div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">Price:</label>
+                                <div class="col-sm-10">
+                                    <input type="text" ng-model="vm.product.price"  class="form-control">
+                                </div>
                             </div>
-                            <div class="form-group"><label class="col-sm-2 control-label">Model:</label>
-                                <div class="col-sm-10"><input type="text" ng-model="vm.product.model" class="form-control"></div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">Model:</label>
+                                <div class="col-sm-10">
+                                    <input type="text" ng-model="vm.product.model" class="form-control">
+                                </div>
                             </div>
-                            <div class="form-group"><label class="col-sm-2 control-label">Quantity on Stock:</label>
-                                <div class="col-sm-10"><input type="text" ng-model="vm.product.quantityOnStock" class="form-control" ></div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">Quantity on Stock:</label>
+                                <div class="col-sm-10">
+                                    <input type="text" ng-model="vm.product.quantityOnStock" class="form-control">
+                                </div>
                             </div>
-                            <div class="form-group"><label class="col-sm-2 control-label">Status:</label>
-                                <div class="col-sm-10"><input type="text" ng-model="vm.product.status" disabled class="form-control"></div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">Status:</label>
+                                <div class="col-sm-10">
+                                    <label class="radio-inline">
+                                        <input type="radio" name="status" ng-model="vm.product.status" value="ACTIVE">Active
+                                    </label>
+                                    <label class="radio-inline">
+                                        <input type="radio" name="status" ng-model="vm.product.status" value="INACTIVE">Inactive
+                                    </label>
+                                </div>
                             </div>
                             <div class="form-group">
                                 <label class="col-sm-2 control-label">Manufacturer:</label>
-                                <div class="col-sm-8"><input type="text" ng-model="vm.product.manufacturer.name" disabled class="form-control"></div>
+                                <div class="col-sm-8">
+                                    <div class="input-group">
+                                        <input type="text" ng-model="vm.product.manufacturer.name" disabled  class="form-control">
+                                        <span class="input-group-btn">
+                                          <button class="btn btn-primary" type="button">
+                                             Select
+                                          </button>
+                                       </span>
+                                    </div>
+                                </div>
                             </div>
                             <div class="form-group"><label class="col-sm-2 control-label">Description:</label>
                                 <div class="col-sm-10">
-                                    <summernote ng-model="vm.product.description"></summernote>
+                                    <summernote height="300" ng-model="vm.product.description"></summernote>
                                 </div>
                             </div>
                         </fieldset>
-
                     </div>
                 </div>
             </div>
