--- a/panel/src/main/resources/static/app/model/product/product-edit.html
+++ b/panel/src/main/resources/static/app/model/product/product-edit.html
@@ -55,7 +55,7 @@
                                 <label class="col-sm-2 control-label">Manufacturer:</label>
                                 <div class="col-sm-8">
                                     <div class="input-group">
-                                        <input type="text" ng-model="vm.product.manufacturer.name" disabled  class="form-control">
+                                        <input type="text" ng-model="vm.product.manufacturer.name" ng-click="vm.selectManufacturer()" disabled  class="form-control">
                                         <span class="input-group-btn">
                                           <button class="btn btn-primary" type="button">
                                              Select
