--- a/panel/src/main/resources/public/index.html
+++ b/panel/src/main/resources/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Dynamos | Dashboard</title>
+    <name>Dynamos | Dashboard</name>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
@@ -36,15 +36,6 @@
     </main>
 </div>
 
-<!--
-<footer class="app-footer">
-    <a href="http://coreui.io">CoreUI</a> &copy; 2017 creativeLabs.
-    <span class="float-right">Powered by <a href="http://coreui.io">CoreUI</a>
-    </span>
-</footer>
--->
-
-
 </body>
 
 <script src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
@@ -70,6 +61,8 @@
 <script src="app/directive/template.directives.js"></script>
 <script src="app/blocks/interceptor/notification.interceptor.js"></script>
 <script src="app/blocks/config/uib-pagination.config.js"></script>
+
+
 <script src="app/model/manufacturer/manufacturer.state.js"></script>
 <script src="app/model/manufacturer/manufacturer.service.js"></script>
 <script src="app/model/manufacturer/manufacturer.controller.js"></script>
@@ -83,5 +76,11 @@
 <script src="app/model/product/product-create.controller.js"></script>
 <script src="app/model/product/product-edit.controller.js"></script>
 
+<script src="app/model/product-category/product-category.state.js"></script>
+<script src="app/model/product-category/product-category.service.js"></script>
+<script src="app/model/product-category/product-category.controller.js"></script>
+<script src="app/model/product-category/product-category-create.controller.js"></script>
+<script src="app/model/product-category/product-category-edit.controller.js"></script>
+<script src="app/model/product-category/product-category-modal.controller.js"></script>
 
 </html>
