--- a/panel/src/main/resources/static/app/model/manufacturer/manufacturer.html
+++ b/panel/src/main/resources/static/app/model/manufacturer/manufacturer.html
@@ -1,6 +1,6 @@
 <div class="box">
     <div class="box-header with-border">
-        <h4 class="box-title">List of Manufacturers</h4>
+        <h4 class=box-title">List of Manufacturers</h4>
     </div>
     <div class="box-body">
         <div class="row">
