--- a/panel/src/main/resources/static/app/model/manufacturer/manufacturer-create.html
+++ b/panel/src/main/resources/static/app/model/manufacturer/manufacturer-create.html
@@ -1,6 +1,6 @@
 <div class="box">
     <div class="box-header with-border">
-        <h4 class="panel-title"> Create New Manufacturer</h4>
+        <h4 class="panel-name"> Create New Manufacturer</h4>
     </div>
     <div class="box-body">
         <form name="manufacturerForm">
