--- a/panel/src/main/resources/static/app/model/manufacturer/manufacturer-edit.html
+++ b/panel/src/main/resources/static/app/model/manufacturer/manufacturer-edit.html
@@ -1,6 +1,6 @@
 <div class="box">
     <div class="box-header">
-        <h4 class="panel-title">Edit Manufacturer</h4>
+        <h4 class="panel-name">Edit Manufacturer</h4>
     </div>
     <div class="box-body">
         <form name="manufacturerForm">
