--- a/panel/src/main/resources/static/app/model/product/product-create.html
+++ b/panel/src/main/resources/static/app/model/product/product-create.html
@@ -19,7 +19,7 @@
                             <div class="form-group">
                                 <label class="col-sm-2 control-label">Name:</label>
                                 <div class="col-sm-10">
-                                    <input type="text" ng-model="vm.product.title" class="form-control">
+                                    <input type="text" ng-model="vm.product.name" class="form-control">
                                 </div>
                             </div>
                             <div class="form-group">
