--- a/panel/src/main/resources/static/app/model/product/product.html
+++ b/panel/src/main/resources/static/app/model/product/product.html
@@ -38,13 +38,13 @@
                                         <i class="fa fa-chevron-down" aria-hidden="true"></i>
                                     </span>
 
-                                    {{product.title}}
+                                    {{product.name}}
                                 </td>
                                 <td>{{product.quantityOnStock}}</td>
                                 <td>{{product.price | currency}}</td>
                                 <td>{{product.status}}</td>
                                 <td>
-                                    <span class="badge badge-success" role="button" ui-sref="product-edit({id:product.identifier})">
+                                    <span class="badge badge-success" role="button" ui-sref="product-edit({id:product.id})">
                                         <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                                     </span>
                                     <span class="badge badge-danger" role="button">
