--- a/panel/src/main/resources/static/app/model/product/product-create.html
+++ b/panel/src/main/resources/static/app/model/product/product-create.html
@@ -64,6 +64,19 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">Product Category:</label>
+                                <div class="col-sm-8">
+                                    <div class="input-group">
+                                        <input type="text" ng-model="vm.product.productCategory.name"  disabled  class="form-control">
+                                        <span class="input-group-btn">
+                                          <button class="btn btn-primary" type="button" ng-click="vm.selectProductCategory()">
+                                             Select
+                                          </button>
+                                       </span>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="form-group"><label class="col-sm-2 control-label">Description:</label>
                                 <div class="col-sm-10">
                                     <summernote height="300" ng-model="vm.product.description"></summernote>
