--- a/panel/src/main/resources/public/index.html
+++ b/panel/src/main/resources/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <name>Dynamos | Dashboard</name>
+    <title>Dynamos | Dashboard</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
@@ -55,10 +55,12 @@
 <script src="lib/message-center.js"></script>
 <script src="lib/angular-breadcrumb.min.js"></script>
 <script src="lib/angular-summernote.min.js"></script>
+<script src="lib/angular-input-masks-standalone.min.js"></script>
 
 <script src="app/app.js"></script>
 <script src="app/app.config.js"></script>
 <script src="app/directive/template.directives.js"></script>
+<script src="app/directive/dynamic.directive.js"></script>
 <script src="app/blocks/interceptor/notification.interceptor.js"></script>
 <script src="app/blocks/config/uib-pagination.config.js"></script>
 
