--- a/panel/src/main/resources/static/app/model/product/product.html
+++ b/panel/src/main/resources/static/app/model/product/product.html
@@ -55,7 +55,7 @@
                             <tr ng-if="vm.showDesc[$index]">
                                 <td colspan="4"  class="row-inner">
                                     <label>Description </label>
-                                    {{product.description}}
+                                    <dynamic dynamic="product.description"></dynamic>
                                 </td>
                             </tr>
                         </tbody>
