--- a/panel/src/main/resources/static/app/model/product/product-create.html
+++ b/panel/src/main/resources/static/app/model/product/product-create.html
@@ -25,7 +25,7 @@
                             <div class="form-group">
                                 <label class="col-sm-2 control-label">Price:</label>
                                 <div class="col-sm-10">
-                                    <input type="text" ng-model="vm.product.price"  class="form-control">
+                                    <input type="text" ng-model="vm.product.price" ui-money-mask class="form-control">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -37,7 +37,7 @@
                             <div class="form-group">
                                 <label class="col-sm-2 control-label">Quantity on Stock:</label>
                                 <div class="col-sm-10">
-                                    <input type="text" ng-model="vm.product.quantityOnStock" class="form-control">
+                                    <input type="text" ng-model="vm.product.quantityOnStock"  ui-number-mask="0" class="form-control">
                                 </div>
                             </div>
                             <div class="form-group">
